syntax = "proto3";

option go_package = "/bluetooth";

service Bluetooth {
    rpc Search(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
    repeated string DeviceNames = 1;
}

message SearchResponse {
    repeated string MacAddresses = 1;
}